Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjNumObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        Number var
        var:SetValue(5.0)
        return var
    end
end